<resources>
    <string name="app_name" translatable="false">Playlist Maker</string>
    <string name="search">Поиск</string>
    <string name="media_button">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="dark_mode">Темная тема</string>
    <string name="share_app">Поделиться приложением</string>
    <string name="call_support">Написать в поддержку</string>
    <string name="agreement">Пользовательское соглашение</string>
    <string name="internet_error">Загрузка не удалась. Проверьте подключение к интернету</string>
    <string name="nothing_found">Ничего не нашлось</string>
    <string name="connection_problem">Проблемы с связью</string>
    <string name="reload">Обновить</string>
    <string name="youSearch">Вы искали</string>
    <string name="clear">Очистить историю</string>
    <string name="totalTime">Длительность</string>
    <string name="album">Альбом</string>
    <string name="year">Год</string>
    <string name="genre">Жанр</string>
    <string name="country">Страна</string>
    <string name="liked_tracks">Избранные треки</string>
    <string name="playlists">Плейлисты</string>
    <string name="empty_media">Ваша медиатека пуста</string>
    <string name="empty_playlists">Вы не создали\nни одного плейлиста</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="default_track_time">00:00</string>
    <string name="name">Название*</string>
    <string name="description">Описание</string>
    <string name="create">Создать</string>
    <string name="add_to_playlist">Добавить в плейлист</string>
    <string name="would_you_like_to_exit">Вы хотите выйти?</string>
    <string name="playlist_created">Плейлист %s создан</string>
    <string name="cancel_creating_of_playlist">Завершить создание плейлиста?</string>
    <string name="all_unsaved_data_will_be_lost">Все несохраненные данные будут потеряны</string>
    <string name="cancel">Отмена</string>
    <string name="finish">Завершить</string>
    <string name="added_to_playlist">Добавлено в плейлист %s</string>
    <string name="track_already_added_to_playlist">Трек уже добавлен в плейлист %s</string>
    <string name="certainty_to_remove">Вы уверены, что хотите удалить трек из плейлиста?</string>
    <string name="certainty_to_remove_playlist">Вы уверены, что хотите удалить этот плейлист?</string>
    <string name="delete_track">Удалить трек</string>
    <string name="delete">Удалить</string>
    <string name="delete_playlist">Удалить плейлист</string>
    <string name="no_tracks_to_share">В этом плейлисте нет списка треков, которым можно поделиться</string>
    <string name="no_tracks_in_playlist">В этом плейлисте нет  треков</string>
    <string name="share">Поделиться</string>
    <string name="edit_info">Редактировать информацию</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="edit">Редактировать</string>
    <string name="save">Сохранить</string>

    <string name="supportMessage">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="supportMail">maximus616161@gmail.com</string>
    <string name="mailSubject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="userAgreement">https://yandex.ru/legal/practicum_offer/</string>
    <string name="androidDevLink">https://practicum.yandex.ru/profile/android-developer/</string>

    <string name="baseUrl">https://itunes.apple.com</string>

    <plurals name="plural_tracks">
        <item quantity="zero">%d треков</item>
        <item quantity="one">%d трек</item>
        <item quantity="two">%d трека</item>
        <item quantity="few">%d трека</item>
        <item quantity="many">%d треков</item>
        <item quantity="other">%d треков</item>
    </plurals>

    <plurals name="plural_minutes">
        <item quantity="zero">%1$d минут</item>
        <item quantity="one">%1$d минута</item>
        <item quantity="two">%1$d минуты</item>
        <item quantity="few">%1$d минуты</item>
        <item quantity="many">%1$d минут</item>
        <item quantity="other">%1$d минут</item>
    </plurals>

</resources>