<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white_main"
    android:padding="@dimen/layout_padding"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/layout_padding"
        >
        <ImageView
            android:id="@+id/go_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:src="@drawable/go_back"
            ></ImageView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:textColor="@color/black_main"
            android:text="@string/setting_screen"
            android:fontFamily="@font/ys_display_regular"
            android:textSize="@dimen/text_size"
            ></TextView>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/layout_padding"
        >

        <Switch
            android:id="@+id/switch3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/setting_button_margin"
            android:fontFamily="@font/ys_display_regular"
            android:text="@string/dark_mode"
            android:textSize="@dimen/setting_text_size" />

        <TextView
            android:id="@+id/textShareApp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/setting_button_margin"
            android:fontFamily="@font/ys_display_regular"
            android:text="@string/share_app"
            android:textColor="@color/black_main"
            android:textSize="@dimen/setting_text_size"
            app:drawableEndCompat="@drawable/share_app" />

        <TextView
            android:id="@+id/textCallSupport"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/setting_button_margin"
            android:textColor="@color/black_main"
            android:text="@string/call_support"
            android:fontFamily="@font/ys_display_regular"
            android:textSize="@dimen/setting_text_size"
            app:drawableEndCompat="@drawable/support"
            />

        <TextView
            android:id="@+id/userAgreement"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/setting_button_margin"
            android:paddingEnd="5dp"
            android:textColor="@color/black_main"
            android:text="@string/agreement"
            android:fontFamily="@font/ys_display_regular"
            android:textSize="@dimen/setting_text_size"
            app:drawableEndCompat="@drawable/agreement"
            />


    </LinearLayout>

</LinearLayout>