<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/CoordinatorViewStyle"
    tools:context=".ui.player.fragment.PlayerFragment"
    >

    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/leftBorder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="@dimen/layout_padding" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/rightBorder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="@dimen/layout_padding" />

            <android.widget.Toolbar
                android:id="@+id/playerToolbar"
                style="@style/ToolbarStyle"
                android:contentInsetStart="@dimen/arrow_padding"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/go_back"
                    style="@style/ScreenHeaderTextStyle"
                    android:drawableLeft="@drawable/go_back"
                    android:text="" />

            </android.widget.Toolbar>

            <ImageView
                android:id="@+id/playerTrackImage"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginHorizontal="@dimen/button_margin"
                android:layout_marginTop="8dp"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintEnd_toStartOf="@+id/rightBorder"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="@+id/leftBorder"
                app:layout_constraintTop_toBottomOf="@+id/playerToolbar"
                tools:srcCompat="@drawable/placeholder_big" />

            <TextView
                android:id="@+id/playerTrackName"
                style="@style/PlayerTrackNameStyle"
                app:layout_constraintEnd_toStartOf="@+id/rightBorder"
                app:layout_constraintStart_toStartOf="@+id/leftBorder"
                app:layout_constraintTop_toBottomOf="@+id/playerTrackImage"
                tools:text="Tommorow" />

            <TextView
                android:id="@+id/playerArtistName"
                style="@style/PlayerArtistNameStyle"
                app:layout_constraintEnd_toStartOf="@+id/rightBorder"
                app:layout_constraintStart_toStartOf="@+id/leftBorder"
                app:layout_constraintTop_toBottomOf="@+id/playerTrackName"
                tools:text="Tommorow" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/playButton"
                style="@style/PlayButtonStyle"
                android:foreground="@drawable/button_play"
                app:layout_constraintEnd_toStartOf="@+id/rightBorder"
                app:layout_constraintStart_toStartOf="@+id/leftBorder"
                app:layout_constraintTop_toBottomOf="@+id/playerArtistName" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/addToMediaButton"
                style="@style/FloatingButtonStyle"
                android:layout_marginLeft="@dimen/button_margin"
                app:layout_constraintBottom_toBottomOf="@+id/playButton"
                app:layout_constraintStart_toStartOf="@+id/leftBorder"
                app:layout_constraintTop_toTopOf="@+id/playButton"
                app:srcCompat="@drawable/add_to_media_btn" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/likeButton"
                style="@style/FloatingButtonStyle"
                android:layout_marginRight="@dimen/button_margin"
                app:layout_constraintBottom_toBottomOf="@+id/playButton"
                app:layout_constraintEnd_toStartOf="@+id/rightBorder"
                app:layout_constraintTop_toTopOf="@+id/playButton"
                app:srcCompat="@drawable/like_btn"
                app:tint="@null" />

            <TextView
                android:id="@+id/playerTrackTime"
                style="@style/PlayerTrackTimeStyle"
                android:text="00:00"
                app:layout_constraintEnd_toEndOf="@+id/playButton"
                app:layout_constraintStart_toStartOf="@+id/playButton"
                app:layout_constraintTop_toBottomOf="@+id/playButton" />

            <TextView
                android:id="@+id/totalTime"
                style="@style/InfoTextStyle"
                android:layout_marginTop="@dimen/player_image_margin"
                android:text="@string/totalTime"
                app:layout_constraintStart_toStartOf="@+id/leftBorder"
                app:layout_constraintTop_toBottomOf="@+id/playerTrackTime" />

            <TextView
                android:id="@+id/albumName"
                style="@style/InfoTextStyle"
                android:text="@string/album"
                app:layout_constraintStart_toStartOf="@+id/leftBorder"
                app:layout_constraintTop_toBottomOf="@+id/totalTime" />

            <TextView
                android:id="@+id/releaseDate"
                style="@style/InfoTextStyle"
                android:text="@string/year"
                app:layout_constraintStart_toStartOf="@+id/leftBorder"
                app:layout_constraintTop_toBottomOf="@+id/albumName" />

            <TextView
                android:id="@+id/genre"
                style="@style/InfoTextStyle"
                android:text="@string/genre"
                app:layout_constraintStart_toStartOf="@+id/leftBorder"
                app:layout_constraintTop_toBottomOf="@+id/releaseDate" />

            <TextView
                android:id="@+id/countryName"
                style="@style/InfoTextStyle"
                android:layout_marginBottom="@dimen/search_placeholder_margin"
                android:text="@string/country"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/leftBorder"
                app:layout_constraintTop_toBottomOf="@+id/genre" />

            <androidx.constraintlayout.widget.Barrier
                android:id="@+id/barrier"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:barrierDirection="end"
                app:constraint_referenced_ids="totalTime, albumName, releaseDate, genre, countryName" />

            <TextView
                android:id="@+id/trackTotalTime"
                style="@style/TrackInfoTextStyle"
                app:layout_constraintBaseline_toBaselineOf="@id/totalTime"
                app:layout_constraintEnd_toStartOf="@+id/rightBorder"
                tools:text="05:41" />

            <TextView
                android:id="@+id/trackAlbum"
                style="@style/TrackInfoTextStyle"
                android:layout_width="0dp"
                android:gravity="end"
                android:ellipsize="end"
                android:singleLine="true"
                android:layout_marginStart="4dp"
                app:layout_constraintBaseline_toBaselineOf="@id/albumName"
                app:layout_constraintStart_toEndOf="@id/albumName"
                app:layout_constraintEnd_toStartOf="@+id/rightBorder"
                tools:text="Tommorow" />

            <TextView
                android:id="@+id/trackReleaseDate"
                style="@style/TrackInfoTextStyle"
                app:layout_constraintBaseline_toBaselineOf="@id/releaseDate"
                app:layout_constraintEnd_toStartOf="@+id/rightBorder"
                tools:text="1999" />

            <TextView
                android:id="@+id/trackGenre"
                style="@style/TrackInfoTextStyle"
                app:layout_constraintBaseline_toBaselineOf="@id/genre"
                app:layout_constraintEnd_toStartOf="@+id/rightBorder"
                tools:text="Rock" />

            <TextView
                android:id="@+id/trackCountry"
                style="@style/TrackInfoTextStyle"
                app:layout_constraintBaseline_toBaselineOf="@id/countryName"
                app:layout_constraintEnd_toStartOf="@+id/rightBorder"
                tools:text="Australia" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <View
        android:id="@+id/backgroundDimLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/overlay_color"
        android:visibility="visible"/>

    <LinearLayout
        style="@style/BottomSheetStyle"
        android:id="@+id/standardBottomSheet"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/rounded_rectangle"
        android:orientation="vertical"
        app:behavior_hideable="true"
        app:behavior_peekHeight="505dp"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">


        <ImageView
            android:id="@+id/imageBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:src="@drawable/rectangle_bottom_sheet" />

        <TextView
            style="@style/ScreenHeaderTextStyle"
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:text="@string/add_to_playlist"
            android:gravity="center"/>

        <Button
            android:id="@+id/buttonNewPlaylist"
            style="@style/buttonReloadStyle"
            android:layout_marginTop="@dimen/search_placeholder_margin"
            android:text="@string/new_playlist" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/playlistsRecycler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="13dp"
            android:paddingTop="@dimen/layout_padding"
            android:visibility="visible"
            >
        </androidx.recyclerview.widget.RecyclerView>

    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>

