<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_lite"
    tools:context=".ui.playlist.PlaylistFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/grey_lite">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/leftBorder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/layout_padding" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/rightBorder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/layout_padding" />

        <ImageView
            android:id="@+id/imagePlaylist"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:scaleType="centerCrop"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@drawable/placeholder" />

        <android.widget.Toolbar
            android:id="@+id/playlistToolbar"
            style="@style/ToolbarStyle"
            android:contentInsetStart="@dimen/arrow_padding"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/go_back"
                style="@style/ScreenHeaderTextStyle"
                android:drawableLeft="@drawable/go_back"
                android:drawableTint="@color/black_main"
                android:text="" />
        </android.widget.Toolbar>

        <TextView
            android:id="@+id/textPlaylistName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:ellipsize="marquee"
            android:marqueeRepeatLimit="marquee_forever"
            android:singleLine="true"
            android:fontFamily="@font/ys_display_bold"
            android:textColor="@color/black_main"
            android:textSize="@dimen/playlist_name_text_size"
            app:layout_constraintStart_toEndOf="@id/leftBorder"
            app:layout_constraintTop_toBottomOf="@id/imagePlaylist"
            tools:text="ЛУЧШИЙ Плейлист" />

        <TextView
            android:id="@+id/textPlaylistDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/ys_display_regular"
            android:textColor="@color/black_main"
            android:textSize="@dimen/playlist_year_text_size"
            app:layout_constraintStart_toEndOf="@id/leftBorder"
            app:layout_constraintTop_toBottomOf="@id/textPlaylistName"
            tools:text="2022" />

        <TextView
            android:id="@+id/trackTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/ys_display_regular"
            android:paddingEnd="@dimen/point_padding"
            android:textAllCaps="false"
            android:textColor="@color/black_main"
            android:textSize="@dimen/playlist_year_text_size"
            app:layout_constraintStart_toEndOf="@id/leftBorder"
            app:layout_constraintTop_toBottomOf="@id/textPlaylistDescription"
            tools:text="300 минут" />

        <TextView
            android:id="@+id/trackCount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/point"
            android:drawablePadding="@dimen/point_padding"
            android:drawableTint="@color/black_main"
            android:fontFamily="@font/ys_display_regular"
            android:gravity="start"
            android:textAllCaps="false"
            android:textColor="@color/black_main"
            android:textSize="@dimen/playlist_year_text_size"
            app:layout_constraintBaseline_toBaselineOf="@id/trackTime"
            app:layout_constraintEnd_toStartOf="@id/rightBorder"
            app:layout_constraintStart_toEndOf="@id/trackTime"
            tools:text="100 треков" />

        <ImageView
            android:id="@+id/imageShare"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginStart="4dp"
            app:srcCompat="@drawable/icon_share"
            app:layout_constraintStart_toEndOf="@id/leftBorder"
            app:layout_constraintTop_toBottomOf="@+id/trackTime"/>

        <ImageView
            android:id="@+id/imageMenu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            app:srcCompat="@drawable/menu_dots"
            app:layout_constraintStart_toEndOf="@id/imageShare"
            app:layout_constraintTop_toTopOf="@id/imageShare"
            app:layout_constraintBottom_toBottomOf="@id/imageShare"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        style="@style/BottomSheetStyle"
        android:id="@+id/tracksBottomSheet"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/rounded_rectangle"
        android:orientation="vertical"
        app:behavior_hideable="false"
        app:behavior_peekHeight="200dp"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:src="@drawable/rectangle_bottom_sheet" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/tracksRecycler"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            android:paddingLeft="13dp"
            android:paddingTop="10dp"
            tools:listitem="@layout/track_card" />

    </LinearLayout>

    <View
        android:id="@+id/backgroundDimLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/overlay_color"
        />

    <LinearLayout
        style="@style/BottomSheetStyle"
        android:id="@+id/actionsBottomSheet"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/rounded_rectangle"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/layout_padding"
        app:behavior_hideable="true"
        app:behavior_peekHeight="300dp"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:src="@drawable/rectangle_bottom_sheet" />

        <include
            android:id="@+id/included_layout"
            layout="@layout/playlist_card_second" />

        <Button
            style="@style/SettingScreenButtonStyle"
            android:id="@+id/buttonSharePlaylist"
            android:layout_marginTop="12dp"
            android:paddingRight="4dp"
            android:text="@string/share"
            />

        <Button
            style="@style/SettingScreenButtonStyle"
            android:id="@+id/buttonEditPlaylist"
            android:layout_marginTop="12dp"
            android:paddingRight="4dp"
            android:text="@string/edit_info"
            />

        <Button
            style="@style/SettingScreenButtonStyle"
            android:id="@+id/buttonDeletePlaylist"
            android:layout_marginTop="12dp"
            android:paddingRight="4dp"
            android:text="@string/delete_playlist"
            />

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
